name:                chap12
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/sky-y/chap12#readme
license:             BSD3
license-file:        LICENSE
author:              Yuki Fujiwara
maintainer:          sky.y.0079@gmail.com
copyright:           (c) 2016, Yuki Fujiwara
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chap12
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
